--- a/lightweight_server/Cargo.toml
+++ b/lightweight_server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "my_server"
+name = "lightweight_server"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,4 +15,5 @@ form_urlencoded = "1"
 http = "1"
 futures-util = { version = "0.3", default-features = false }
 pretty_env_logger = "0.5"
-sysinfo = "0.29" # For CPU & network usage metrics
+sysinfo = "0.29"
+tokio-util = { version = "0.7", features = ["io"] }
